--- a/.github/workflows/update-insecure-dependencies.yaml
+++ b/.github/workflows/update-insecure-dependencies.yaml
@@ -10,11 +10,11 @@ jobs:
   build-matrix:
     runs-on: ubuntu-latest
     outputs:
-      branches: ${{ toJSON(steps.generate-matrix.outputs.branches) }}
+      branches: ${{ steps.generate-matrix.outputs.branches }}
     steps:
       - name: generate-matrix
         run: |
-          ACTIVE_BRANCHES=`gh api /repos/${{ github.repository }}/contents/active-branches.json --jq '.content | @base64d'`
+          ACTIVE_BRANCHES=`gh api /repos/${{ github.repository }}/contents/active-branches.json --jq '.content | @base64d' | head -1`
           echo "branches=${ACTIVE_BRANCHES}" >> $GITHUB_OUTPUT
         env:
           GITHUB_TOKEN: ${{ github.token }}
